2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj: Bump to version 3.1.0.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj: Code re-styling.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* Swapping.cs:
	* PrintHex.cs:
	* ArrayFill.cs:
	* ArrayIsEmpty.cs:
	* DateHandlers.cs:
	* StringHandlers.cs:
	* BigEndianBitConverter.cs:
	* EndianAwareBinaryReader.cs: Refactor and code cleanup.

2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* ArrayFill.cs:
	* ArrayIsEmpty.cs:
	* DiscImageChef.Helpers.csproj:
	  Implemented Certance, Fujitsu and Hewlett-Packard vendor
	  commands.

2015-12-30  Natalia Portillo  <claunia@claunia.com>

	* StringHandlers.cs:
	  Fixed string conversion when input byte array is null.

2015-12-04  Natalia Portillo  <claunia@claunia.com>

	* StringHandlers.cs:
	  Finally CD-Text on lead-in is getting decoded correctly...

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj:
	  Upgrade .NET version to 4.0.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* PrintHex.cs:
	* DateHandlers.cs:
	* DiscImageChef.Helpers.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* PrintHex.cs:
	* Swapping.cs:
	* ArrayFill.cs:
	* DateHandlers.cs:
	* StringHandlers.cs:
	* BigEndianBitConverter.cs:
	* EndianAwareBinaryReader.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.Helpers.csproj:
	  Move helpers to a separate library.
